--- a/helpers/platform/Cargo.toml
+++ b/helpers/platform/Cargo.toml
@@ -18,6 +18,7 @@ time-tz = "1.0.2"
 atty = "0.2.14"
 base64 = "0.13.0"
 anyhow = "1.0.58"
+semver = "1.0.12"
 
 [target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
 wasm-bindgen = "0.2.80"
