--- a/zuk/Cargo.toml
+++ b/zuk/Cargo.toml
@@ -14,8 +14,9 @@ license = "MIT"
 readme = "../README.md"
 
 [dependencies]
+atty = "0.2.14"
 anyhow = "1.0.56"
-base64 = { version = "0.13.0", optional = true }
+base64 = "0.13.0"
 clap = { version = "3.1.6", features = ["derive"] }
 css-color = "0.2.4"
 hexyl = "0.10.0"
@@ -30,6 +31,7 @@ yozuk = "0.20.1"
 yozuk-sdk = "0.20.0"
 yozuk-helper-platform = "0.20.1"
 yozuk-helper-filetype = "0.19.1"
+semver = "1.0.12"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 extrasafe = { version = "0.1.2", optional = true }
@@ -44,7 +46,7 @@ yozuk = { version = "0.20.1", features = ["rayon", "wild"] }
 
 [features]
 default = ["rpc", "secure-context"]
-rpc = ["json-rpc2", "serde", "serde_derive", "serde_json", "base64"]
+rpc = ["json-rpc2", "serde", "serde_derive", "serde_json"]
 secure-context = ["extrasafe", "syscalls"]
 
 [dev-dependencies]
