--- a/zuk/Cargo.toml
+++ b/zuk/Cargo.toml
@@ -46,6 +46,9 @@ rustyline = "9.1.2"
 rustyline-derive = "0.6.0"
 yozuk = { version = "0.20.1", features = ["rayon", "wild"] }
 
+[target.'cfg(target_os = "wasi")'.dependencies]
+wasi = "0.11.0"
+
 [features]
 default = ["rpc", "secure-context"]
 rpc = ["json-rpc2", "serde", "serde_derive", "serde_json"]
