--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -56,7 +56,7 @@ sha2 = { version = "0.10.2", optional = true }
 sha3 = { version = "0.10.1", optional = true }
 strum = { version = "0.24.0", features = ["derive"] }
 thiserror = "1.0.30"
-time = { version = "0.3.9", features = ["formatting"], optional = true }
+time = { version = "0.3.9", features = ["formatting", "parsing"], optional = true }
 time-tz = { version = "1.0.2", features = ["db"], optional = true }
 urlencoding = { version = "2.1.0", optional = true }
 uuid = { version = "1.0.0", features = ["v4"], optional = true }
