--- a/yozuk/Cargo.toml
+++ b/yozuk/Cargo.toml
@@ -17,7 +17,6 @@ anyhow = "1.0.56"
 bytes = "1.1.0"
 const-sha1 = "0.2.0"
 crfs = "0.2.0"
-distance = "0.4.0"
 mediatype = "0.19.4"
 rayon = { version = "1.5.1", optional = true }
 yozuk-core-skillset = "0.20.2"
@@ -27,6 +26,7 @@ yozuk-sdk = "0.20.2"
 yozuk-model = "0.20.2"
 rand = "0.8.5"
 deunicode = "1.3.1"
+fuzzy-matcher = "0.3.7"
 
 [features]
 default = ["default-skills"]
