--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "yozuk-core-skillset"
-version = "0.20.2"
+version = "0.20.3"
 edition = "2021"
 authors = ["picoHz <picoHz@outlook.com>"]
 description = "Set of default Yozuk skills"
@@ -56,7 +56,10 @@ sha2 = { version = "0.10.2", optional = true }
 sha3 = { version = "0.10.1", optional = true }
 strum = { version = "0.24.0", features = ["derive"] }
 thiserror = "1.0.30"
-time = { version = "0.3.9", features = ["formatting", "parsing"], optional = true }
+time = { version = "0.3.9", features = [
+  "formatting",
+  "parsing",
+], optional = true }
 time-tz = { version = "1.0.2", features = ["db"], optional = true }
 urlencoding = { version = "2.1.0", optional = true }
 uuid = { version = "1.0.0", features = ["v4"], optional = true }
