--- a/zuk/Cargo.toml
+++ b/zuk/Cargo.toml
@@ -40,7 +40,7 @@ syscalls = { version = "0.5.0", optional = true }
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 crossterm = "0.23.1"
 hanbun = "0.4.1"
-image = "0.24.2"
+image = { version = "0.24.2", default-features = false, features = ["png"] }
 time-tz = { version = "1.0.2", features = ["system"] }
 rustyline = "9.1.2"
 rustyline-derive = "0.6.0"
