--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -71,6 +71,7 @@ yozuk-sdk = "0.20.2"
 once_cell = "1.12.0"
 rmpv = { version = "1.0.0", optional = true, features = ["with-serde"] }
 phf = { version = "0.11.0", features = ["macros"] }
+shell-words = "1.1.0"
 
 [features]
 default = []
