--- a/zuk/Cargo.toml
+++ b/zuk/Cargo.toml
@@ -33,7 +33,7 @@ yozuk-helper-platform = "0.20.2"
 yozuk-helper-filetype = "0.20.2"
 semver = "1.0.12"
 
-[target.'cfg(target_os = "linux")'.dependencies]
+[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
 extrasafe = { version = "0.1.2", optional = true }
 syscalls = { version = "0.5.0", optional = true }
 
